联系我们-修改手机号的字体大小

--- a/css/style.css
+++ b/css/style.css
@@ -2272,15 +2272,15 @@ color:#ffffff;
 
 }
 
-.contact-left ul li:nth-child(3) {
+/*.contact-left ul li:nth-child(3) {*/
 
-font-size:20px;
+/*font-size:20px;*/
 
-  margin: 30px 0;
+  /*margin: 30px 0;*/
 
-  font-weight: 800;
+  /*font-weight: 800;*/
 
-}
+/*}*/
 
 .contact-left ul li:nth-child(7) {
 
