--- a/css/basics.css
+++ b/css/basics.css
@@ -5,10 +5,8 @@
 .works-head {
     font-size: 16px;
     color: #FFFFFF;
-<<<<<<< HEAD
-=======
 }
 #cont_p span:first-child {
     text-indent:2em;
->>>>>>> develop
+    list-style-type: none;
 }
